server/resources/mssql/templates/vpc-endpoints.yaml
#prettier-ignore
---
AWSTemplateFormatVersion: 2010-09-09

Description: 'A CloudFormation template to create VPC endpoints for AWS services like s3, cloudformation, ssm, sqs and cloudwatch.'

Metadata:
    AWS::CloudFormation::Interface:
        ParameterGroups:
            - Label:
                  default: VPC endpoint configuration
              Parameters:
                  - VPCId
                  - VPCCIDR
                  - PreferredSubnetId
                  - PreferredSubnetCidrblock
                  - StandbySubnetId
                  - StandbySubnetCidrblock
                  - S3EndpointExists
                  - CloudformationEndpointExists
                  - SsmEndpointExists
                  - SqsEndpointExists
                  - CloudwatchLogsEndpointExists
                  - FsxEndpointExists
                  - Ec2EndpointExists
                  - S3EndpointRouteTables
        ParameterLabels:
            VPCId:
                default: Existing VPC ID for deployment.
            VPCCIDR:
                default: VPCCIDR for instances launched in existing VPC. Also used for setting up security groups. For example, 10.0.0.8/16
            PreferredSubnetId:
                default: Preferred subnet.
            PreferredSubnetCidrblock:
                default: Preferred subnet cidr block.
            StandbySubnetId:
                default: Standby subnet.
            StandbySubnetCidrblock:
                default: Standby subnet cidr block.
            S3EndpointExists:
                default: Boolean to check if an S3 endpoint exists in the vpc.
            CloudformationEndpointExists:
                default: Boolean to check if a Cloudformation endpoint exists in the vpc.
            SsmEndpointExists:
                default: Boolean to check if a SSM endpoint exists in the vpc.
            SqsEndpointExists:
                default: Boolean to check if a SQS endpoint exists in the vpc.
            CloudwatchLogsEndpointExists:
                default: Boolean to check if a Cloudwatch logs endpoint exists in the vpc.
            FsxEndpointExists:
                default: Boolean to check if a FSxN endpoint exists in the vpc.
            Ec2EndpointExists:
                default: Boolean to check if a EC2 endpoint exists in the vpc.

Parameters:
    VPCId:
        Description: Existing VPC ID for deployment.
        Type: AWS::EC2::VPC::Id
    
    VPCCIDR:
        AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
        ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
        Description: CIDR block for the VPC.
        Type: String

    PreferredSubnetId:
        Description: Specify the preferred subnet for your file system.
        Type: AWS::EC2::Subnet::Id
    
    PreferredSubnetCidrblock:
        Description: Cidrblock for preferred subnet.
        Type: String
        AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$

    StandbySubnetId:
        Description: Specify the standby subnet for your file system.
        Type: String
        Default: subnet-123456
    
    StandbySubnetCidrblock:
        Description: Cidrblock for standby subnet.
        Type: String
        AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
        Default: 10.1.1.1/18
        
    S3EndpointRouteTables:
        Description: Route table ids to attach to S3 gateway endpoint.
        Type: String
    
    S3EndpointExists:
        Description: Boolean to convey if an S3 endpoint exists in the vpc.
        Type: String
        Default: 'false'
    
    CloudformationEndpointExists:
        Description: Boolean to convey if a Cloudformation endpoint exists in the vpc.
        Type: String
        Default: 'false'
    
    SsmEndpointExists:
        Description: Boolean to convey if a SSM endpoint exists in the vpc.
        Type: String
        Default: 'false'
    
    SqsEndpointExists:
        Description: Boolean to convey if a SQS endpoint exists in the vpc.
        Type: String
        Default: 'false'
    
    CloudwatchLogsEndpointExists:
        Description: Boolean to convey if a Cloudwatch logs endpoint exists in the vpc.
        Type: String
        Default: 'false'

    FsxEndpointExists:
        Description: Boolean to convey if a FSxN endpoint exists in the vpc.
        Type: String
        Default: 'false'
    
    Ec2EndpointExists:
        Description: Boolean to convey if a EC2 endpoint exists in the vpc.
        Type: String
        Default: 'false'
    
    Ec2MessagesEndpointExists:
        Description: Boolean to convey if  EC2 messages endpoint exists in the vpc.
        Type: String
        Default: 'false'

    SSMMessagesEndpointExists:
        Description: Boolean to convey if SSM messages endpoint exists in the vpc.
        Type: String
        Default: 'false'

Conditions:
    SingleZone: !Equals [!Ref StandbySubnetId, 'subnet-123456']
    MultiZone: !Not [!Equals [!Ref StandbySubnetId, 'subnet-123456']]
    CreateCloudformationEndpoint: !Equals [!Ref CloudformationEndpointExists, 'false']
    CreateSsmEndpoint: !Equals [!Ref SsmEndpointExists, 'false']
    CreateSqsEndpoint: !Equals [!Ref SqsEndpointExists, 'false']
    CreateS3Endpoint: !Equals [!Ref S3EndpointExists, 'false']
    CreateCloudwatchLogsEndpoint: !Equals [!Ref CloudwatchLogsEndpointExists, 'false']
    CreateFsxEndpoint: !Equals [!Ref FsxEndpointExists, 'false']
    CreateEc2Endpoint: !Equals [!Ref Ec2EndpointExists, 'false']
    CreateEc2MessagesEndpoint: !Equals [!Ref Ec2MessagesEndpointExists, 'false']
    CreateSSMMessagesEndpoint: !Equals [!Ref SSMMessagesEndpointExists, 'false']
    CreateSG: {"Fn::Or": [{"Condition": "CreateCloudformationEndpoint"}, {"Condition": "CreateSsmEndpoint" },{"Condition": "CreateSqsEndpoint" },
                {"Condition": "CreateS3Endpoint"}, {"Condition": "CreateCloudwatchLogsEndpoint"}, {"Condition": "CreateFsxEndpoint"},
                {"Condition": "CreateEc2Endpoint"}, {"Condition": "CreateEc2MessagesEndpoint"}, {"Condition": "CreateSSMMessagesEndpoint"}]}
    CreateSingleZoneSG: {"Fn::And": [{"Condition": "SingleZone"},{"Condition": "CreateSG"}]}
    CreateMultiZoneSG: {"Fn::And": [{"Condition": "MultiZone"},{"Condition": "CreateSG"}]}

Resources:
    HttpsSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: 'Allow HTTPS traffic from the VPC'
        VpcId: !Ref VPCId
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VPCCIDR
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref PreferredSubnetCidrblock
          - !If
              - CreateMultiZoneSG
              - IpProtocol: tcp
                FromPort: 443
                ToPort: 443
                CidrIp: !Ref StandbySubnetCidrblock
              - !Ref AWS::NoValue

    S3Endpoint:
      Condition: CreateS3Endpoint
      Type: AWS::EC2::VPCEndpoint
      Properties:
        VpcId: !Ref VPCId
        VpcEndpointType: Gateway
        ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
        RouteTableIds: !Split [",", !Ref S3EndpointRouteTables] 
        
    CloudformationEndpoint:
      Condition: CreateCloudformationEndpoint
      Type: AWS::EC2::VPCEndpoint
      Properties:
        VpcId: !Ref VPCId
        VpcEndpointType: Interface
        ServiceName: !Sub 'com.amazonaws.${AWS::Region}.cloudformation'
        SubnetIds:
            !If [SingleZone, [!Ref PreferredSubnetId], [!Ref PreferredSubnetId, !Ref StandbySubnetId]]
        PrivateDnsEnabled: true
        SecurityGroupIds: 
            - !Ref HttpsSecurityGroup
    
    SqsEndpoint:
      Condition: CreateSqsEndpoint
      Type: AWS::EC2::VPCEndpoint
      Properties:
        VpcId: !Ref VPCId
        VpcEndpointType: Interface
        ServiceName:  !Sub 'com.amazonaws.${AWS::Region}.sqs'
        SubnetIds:
            !If [SingleZone, [!Ref PreferredSubnetId], [!Ref PreferredSubnetId, !Ref StandbySubnetId]]
        PrivateDnsEnabled: true
        SecurityGroupIds: 
            - !Ref HttpsSecurityGroup
    
    SsmEndpoint:
      Condition: CreateSsmEndpoint
      Type: AWS::EC2::VPCEndpoint
      Properties:
        VpcId: !Ref VPCId
        VpcEndpointType: Interface
        ServiceName:  !Sub 'com.amazonaws.${AWS::Region}.ssm'
        SubnetIds:
            !If [SingleZone, [!Ref PreferredSubnetId], [!Ref PreferredSubnetId, !Ref StandbySubnetId]]
        PrivateDnsEnabled: true
        SecurityGroupIds: 
            - !Ref HttpsSecurityGroup
    
    SsmMessagesEndpoint:
      Condition: CreateSSMMessagesEndpoint
      Type: AWS::EC2::VPCEndpoint
      Properties:
        VpcId: !Ref VPCId
        VpcEndpointType: Interface
        ServiceName:  !Sub 'com.amazonaws.${AWS::Region}.ssmmessages'
        SubnetIds:
            !If [SingleZone, [!Ref PreferredSubnetId], [!Ref PreferredSubnetId, !Ref StandbySubnetId]]
        PrivateDnsEnabled: true
        SecurityGroupIds: 
            - !Ref HttpsSecurityGroup
    
    Ec2MessagesEndpoint:
      Condition: CreateEc2MessagesEndpoint
      Type: AWS::EC2::VPCEndpoint
      Properties:
        VpcId: !Ref VPCId
        VpcEndpointType: Interface
        ServiceName:  !Sub 'com.amazonaws.${AWS::Region}.ec2messages'
        SubnetIds:
            !If [SingleZone, [!Ref PreferredSubnetId], [!Ref PreferredSubnetId, !Ref StandbySubnetId]]
        PrivateDnsEnabled: true
        SecurityGroupIds: 
            - !Ref HttpsSecurityGroup
    
    CloudwatchLogsEndpoint:
      Condition: CreateCloudwatchLogsEndpoint
      Type: AWS::EC2::VPCEndpoint
      Properties:
        VpcId: !Ref VPCId
        VpcEndpointType: Interface
        ServiceName:  !Sub 'com.amazonaws.${AWS::Region}.logs'
        SubnetIds:
            !If [SingleZone, [!Ref PreferredSubnetId], [!Ref PreferredSubnetId, !Ref StandbySubnetId]]
        PrivateDnsEnabled: true
        SecurityGroupIds: 
            - !Ref HttpsSecurityGroup

    FsxEndpoint:
      Condition: CreateFsxEndpoint
      Type: AWS::EC2::VPCEndpoint
      Properties:
        VpcId: !Ref VPCId
        VpcEndpointType: Interface
        ServiceName:  !Sub 'com.amazonaws.${AWS::Region}.fsx'
        SubnetIds:
            !If [SingleZone, [!Ref PreferredSubnetId], [!Ref PreferredSubnetId, !Ref StandbySubnetId]]
        PrivateDnsEnabled: true
        SecurityGroupIds: 
            - !Ref HttpsSecurityGroup
    
    Ec2Endpoint:
      Condition: CreateEc2Endpoint
      Type: AWS::EC2::VPCEndpoint
      Properties:
        VpcId: !Ref VPCId
        VpcEndpointType: Interface
        ServiceName:  !Sub 'com.amazonaws.${AWS::Region}.ec2'
        SubnetIds:
            !If [SingleZone, [!Ref PreferredSubnetId], [!Ref PreferredSubnetId, !Ref StandbySubnetId]]
        PrivateDnsEnabled: true
        SecurityGroupIds: 
            - !Ref HttpsSecurityGroup
